--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,3 +1,23 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  html, body {
+    height: 100%;
+  }
+  html {
+    font-size: 16px;
+  }
+  @font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/Poppins-Regular.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/Poppins-Bold.ttf') format('truetype');
+    font-weight: bold;
+  }
 body {
     font-family: 'Segoe UI', sans-serif;
     background-color: #f8f9fa;
@@ -6,7 +26,6 @@ body {
     align-items: center;
     min-height: 100vh;
     margin: 0;
-    padding: 20px;
   }
   .father-container {
     display: flex;
@@ -20,9 +39,7 @@ body {
     font-family: "Poppins", sans-serif;
     font-size: 24px;
     color: #4361ee;
-    margin-bottom: 20px;
-  }
- 
+  } 
   .container {
     display: flex;
     flex-direction: column;
@@ -35,12 +52,21 @@ body {
     height: 100%;
   }
 
+  .father-container .container .form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    
+  }
   .encabezado{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 350px;
+    width: 80%;
+    gap: 10px;
   }
 
   .container .parrafo {
@@ -50,6 +76,7 @@ body {
     font-family: "Poppins", sans-serif;
     font-size: auto;
     color: #000;
+    margin-bottom: 10px;
   }
   .container-image{
     display: flex;
@@ -69,6 +96,7 @@ body {
   }
   .form-group {
     margin-bottom: 20px;
+    width: 100%;
   }
   label {
     display: block;
@@ -87,7 +115,7 @@ body {
     background-color: #4361ee;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
     padding: 12px 20px;
     font-size: 16px;
     cursor: pointer;
@@ -100,22 +128,8 @@ body {
     color: #dc3545;
     margin-top: 20px;
   }
-  .success {
-    border-radius: 10px;
-    margin-top: 20px;
-    padding: 15px;
-    background-color: #d9d9da;
-  }
-  .actions {
-    margin-top: 20px;
-    display: flex;
-    gap: 10px;
-  }
-  .actions button {
-    flex: 1;
-  }
 
-  @media screen and (max-width: 806px) {
+  @media screen and (max-width: 900px) {
   .container-image {
     display: none;
   }
@@ -125,5 +139,13 @@ body {
   }
   .container{
     border-radius: 10px;
+    margin: 10px;
   }
+  }
+
+  @media screen and (min-width:1000px){
+    .father-container{
+        width: 80%;
+        height: 80%;
+    }
   }
